Fixing visual nits on resize
Summary:
Universe Details layout update:
- get rid of couple divs and bootstrap dependencies
- fix hor scrollbar legacy

Test Plan: Open universe details, take a look on main universe menu and title, make sure they act the same

Reviewers: wesley, ram, andrew

Reviewed By: ram, andrew

Subscribers: jenkins-bot

Differential Revision: https://phabricator.dev.yugabyte.com/D6645

--- a/managed/ui/src/components/universes/UniverseDetail/UniverseDetail.scss
+++ b/managed/ui/src/components/universes/UniverseDetail/UniverseDetail.scss
@@ -246,8 +246,6 @@ h2 {
 }
 
 .universe-details {
-  overflow: hidden;
-
   .content-panel {
     > .header {
       margin-bottom: 24px;
